style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}


body {
    background-color: #0f0f0f;  
}

.navbar {
   
    background-color: #1a1a1a;
    height: 68px;
    padding: 0 20px;
    width: 100%;
    position: sticky;
    z-index: 100;
        top: 0;
}

.navbar-inner {
     display: flex;
    justify-content: space-between; 
    align-items: center;
     max-width: 1500px;
     height: 100%;
     margin: 0 auto;
    

}

.left-content h1 {
    color: #c8f135;
    font-size: 2rem;
    font-weight: 800;
    font-family: 'Syne', sans-serif;
  
   
}

.right-content {
    display: flex;
    gap: 20px;
    align-items: center;
}

.right-content a {
    text-decoration: none;
    color: #888;
    font-size: 0.95rem;
    font-family: DM Sans, sans-serif;
    font-weight: 500;
    transition: color 0.3s ease;
}



a:hover {
    color: #fafafa;
}

.desktop-btn {
    padding: 10px 20px;
    background-color: #c8f135;
    color: #1a1a1a;
    border: none;
    border-radius: 20px;
    font-size: 0.95rem;
    font-family: DM Sans, sans-serif;
    font-weight: bold;
    cursor: pointer;
    transition: ease-in-out;
}

.btn:hover {
    background-color: #ccef86;
}

/* Mobile Styles hamburger*/

.menu-toggle {
    display: none; /* hide the checkbox */
}

.hamburger {

    display: none;
    flex-direction: column;
    gap: 5px;
    cursor: pointer;
    padding: 4px;
}

.hamburger span {
    display: block;
    width: 24px;
    height: 2px;
     background: #c8f135;
     border-radius: 2px;
     transition: transform 0.3s, opacity 0.3s;
}

.menu-toggle:checked ~ nav .hamburger span:nth-child(1) {
  transform: translateY(7px) rotate(45deg);
}

.menu-toggle:checked ~ nav .hamburger span:nth-child(2) {
  opacity: 0;
  transform: scaleX(0);
}

.menu-toggle:checked ~ nav .hamburger span:nth-child(3) {
  transform: translateY(-7px) rotate(-45deg);
}

/* Mobile Links */

.mobile-links{
    display: none;
    flex-direction: column;
    align-items: start;
   background-color: #1a1a1a;
   padding: 1.5rem 2rem;
     position: sticky;
    z-index: 100;
        top: 68px;
   border-bottom: 1px solid #2a2a2a;
     border-top: 1px solid #2a2a2a;
   transition: opacity 0.3s ease;
   transform: translateY(-10px);
  transition: transform 0.3s ease, opacity 0.3s ease;
  

}

.mobile-links a {
    text-decoration: none;
    color: #888;
    font-size: 0.95rem;
    font-family: DM Sans, sans-serif;
    font-weight: 500;
    padding: 20px 0;
    border-bottom: 1px solid #2a2a2a;
    display: block;
    width: 100%;
   
}

.mobile-links a:hover {
    color: #fafafa;
}

  .mobile-links a.mobile-btn {
    padding: 20px 0px;
    color: #c8f135;
    font-size: 0.95rem;
    font-family: DM Sans, sans-serif;
    font-weight: bold;
    cursor: pointer;
    transition: ease-in-out;
    border-bottom: none;
    
   
}

.menu-toggle:checked ~ .mobile-links,
.menu-toggle:checked ~ * .mobile-links {
  display: flex;
  transform: translateY(0);
}


.highest-container {
    display: flex;
    gap: 4rem;
    align-items: center;   
    padding-right:2rem;
    max-width: 1500px;
    width: 100%;
    margin: 0 auto;
}

.left-hero {
display: flex;
flex-direction: column;
align-items: start;
padding-left: 2rem;
padding-top: 2rem;
max-width: 400px;
width: 100%;
}

.left-hero-list  {
  background-color: #2a2a2a;
  padding: 0.4rem 1.5rem;
  border-radius: 30px;
  color: #c8f135;
  font-family: DM Sans, sans-serif;
  font-size: 0.95rem;
  width: fit-content;
}



.main-hero h2 {
   font-size: clamp(2rem, 4vw, 3.5rem);
  font-weight: 800;
  color: #fafafa;
  font-family: 'Syne', sans-serif;
}

.main-hero h2 em {
  font-family: 'Syne', sans-serif;
  color: #c8f135;

}

.sub-hero p {
    margin: 1rem 0 2rem 0;
    font-family: 'DM Sans', sans-serif;
    font-weight: 500;
    color: #888;
    font-size: 1.1rem;
}

.buttons-hero {
    display: flex;
    gap: 30px;
    border-bottom: 1px solid #888;
    padding: 0 0 1rem 0;
    max-width: 400px;
    width: 90%;
   
    
}

.desktop-btn01  {
    background-color: #c8f135;
    border: none;
    border-radius: 20px;
    padding: 10px 45px;
    font-family: 'DM Sans', sans-serif;
    font-size: 0.95rem;
    font-weight: bold;
    cursor: pointer;
}

.desktop-btn02 {
    background: none;
    border: none;
    color: #888;
    font-family: 'DM Sans', sans-serif;
       font-size: 0.95rem;
       cursor: pointer;
}

.numbers-population {
    margin-top: 1rem;
    display: flex;
    gap: 3rem;
}

.numbers-population h4 {
    font-family: 'Syne', sans-serif;
    font-size: 3rem;
    color: #fafafa;
    font-size: clamp(1.55rem, 3vw, 3.5rem);

}

.numbers-population p {
    font-family: 'DM Sans', sans-serif;
    color: #888;
    font-size: 0.8rem;
    font-weight: 500;
    font-size: clamp(0.8rem, 2vw, 1rem);
}

.right-hero-container {
    display: flex;
    flex-direction: column;
  max-width: 420px;
  width: 100%;
 background: linear-gradient(135deg, #c8f13520, transparent 60%); 
  border-radius: 24px;
  border: 1px solid #2a2a2a;
  padding: 2rem;      
  margin: 0 auto;       
     
}

.header-part {
    display: flex;
    justify-content: space-between;

}

.header-part h6 {
    font-family: 'DM Sans', sans-serif;
    color: #888;
    font-size: 0.70rem;
    font-weight: 500;
    letter-spacing: 3px;
}

.header-part ul {
    color: #c8f135;
    font-family: 'DM Sans', sans-serif;
}


.value-part h2 {
    font-family: 'Syne', sans-serif;
    color: #fafafa;
    font-size: clamp(1.95rem, 3vw, 2.5rem);
    font-weight: 800;

}

.value-part p {
    font-family: 'DM Sans', sans-serif;
    color: #888;
    font-size: 0.95rem;
    font-weight: 500;
  
}

.last-month {
    margin-top: 7rem;
    border-top: 1px solid #888;
    display: flex;
    justify-content: space-between;
     
}

.last-month h4 {
    margin-top: 1rem;
    font-family: 'DM Sans', sans-serif;
    color: #888;
    font-size: 0.75rem;
    font-weight: 500;
}

.last-month p {
    font-family: 'DM Sans', sans-serif;
    color: #c8f135;
    font-size: 0.95rem;
     margin-top: auto;
    font-weight: 500;
}

@media (max-width: 768px) {
  


.highest-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 3rem 1.5rem 2rem 1.5rem;
    
}

.right-hero-container {
    max-width: 700px;
    width: 100%;
   
}

.right-content {
    display: none;
}

.hamburger {
    display: flex;
}

.mobile-links {
    display: none;
    
}

.right-hero {
    flex-direction: column;
    align-items: center;
    text-align: center;
    margin: 0 auto;
}

.buttons-hero {
    justify-content: center;
   
}

.numbers-population {
   
    justify-content: center;
    text-align: center;
}

.right-hero-container {
    order: -1;
    
}

}

